--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "play-react",
+  "name": "kanban-board",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
+    "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
